# presencejj

./: .gitignore  Cargo.toml  README.md
docs/: documentation.typ
src/: config.rs  main.rs  prelude.rs  stats.rs
src/data/: adresse.rs  cam.rs  email.rs  mod.rs  tel.rs
src/extract/: excel.rs  mod.rs  presence.rs  prog.rs
src/groupes/: comptes.rs  fiche_sante.rs  groupes.rs  membres.rs  mod.rs
src/print/: mod.rs  typst.rs
templates/: template.typ  tmp.typ
