[package]
name = "presencejj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.15.2"
office = "0.8"
lazy_static = "1.5"
regex = "1.10"
chrono = "0.4.39"
rand = "0.9.0"
console = "0.15.10"
dialoguer = "0.11.0"