[package]
name = "presencejj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.15"
office = "0.8"
lazy_static = "1.5"
regex = "1.10"
chrono = "0.4.40"
rand = "0.9.0"
console = "0.15.10"
dialoguer = "0.11.0"
tempfile = "3.17.0"
strum = "0.27.1"
strum_macros = "0.27"